@@ -56,6 +56,8 @@ Version 7.44 - not yet released
   - ability to send squawk code from airspace details dialog to transponder
   - add support for a dedicated north-up map page layout
   - the thermal assistant InfoBox is now clickable
+  - nearest airspace InfoBoxes (horizontal and vertical) are now clickable
+    to open airspace details dialog #406
   - Add support for multiple airspace files in UI
   - Add support for multiple waypoint files in UI
   - Add support for multiple  airfields or details waypoint in UI
